[package]
name = "rui3-at"
version = "0.1.0"
edition = "2021"
authors = ["Riccardo Persello <riccardo.persello@icloud.com>"]
description = "AT command parser for RUI3-compatible radios."
license = "MIT"
repository = "https://github.com/uniuderacing/rui3-at"
readme = "README.md"
keywords = ["at", "parser", "rui3", "radio", "lora", "rak"]
categories = ["embedded", "hardware-support", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
no-std = true

[dependencies]
atat = { version = "0.18.0" }
nb = { version = "1.1.0" }
text_io = { version = "0.1.12" }
fugit = "0.3.6"
# hex = "0.4.3"
log = "0.4.14"

[dev-dependencies]
serialport = { git = "https://github.com/dbrgn/serialport-rs", branch = "embedded-hal", features = ["embedded"], default_features = false }
